Use open source carbonj on 1P